k8s/v1/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-scala
  labels:
    name: backend-scala
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-scala
  template:
    metadata:
      labels:
        name: backend-scala
      name: backend-scala
      namespace: default
    spec:
      containers:
        - name: backend-scala
          image: dbortnichuk/backend_scala:latest
          env: # override app params via env vars
            - name: BACKEND_PORT
              value: "9090"
            - name: BACKEND_APP_VERSION
              value: "123"
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 2
            periodSeconds: 60
