k8s/v1/deployment-frontend-deprecated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-scala
  labels:
    name: frontend-scala
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend-scala
  template:
    metadata:
      labels:
        name: frontend-scala
      name: frontend-scala
      namespace: default
    spec:
      containers:
        - name: frontend-scala
          image: dbortnichuk/frontend_scala:deprecated
          env: # override app params via env vars
            - name: FRONTEND_PORT
              value: "9100"
            - name: FRONTEND_APP_VERSION
              value: "456"
            - name: BACKEND_TARGET_HOST # where to look for backend
              value: "backend-scala-clusterip" # backend service name will be used as internal DNS name of the service
            - name: BACKEND_TARGET_PORT
              value: "9090"
          readinessProbe:
            httpGet:
              path: /ready
              port: 9100
            initialDelaySeconds: 2
            periodSeconds: 60
