k8s/v1/statefulset-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-mysql
  labels:
    name: db-mysql
spec:
  serviceName: db-mysql-headless
  replicas: 2
  selector:
    matchLabels:
      name: db-mysql
  template:
    metadata:
      labels:
        name: db-mysql
      name: db-mysql
      namespace: default
    spec:
      containers:
        - name: db-mysql
          image: dbortnichuk/db-mysql-test:8.0.26
          ports:
            - containerPort: 3306
              name: db-mysql
              # defaut db in image disappears if this is configured
#          volumeMounts:
#            - name: db-mysql-pv
#              mountPath: /var/lib/mysql
#      volumes:
#        - name: db-mysql-pv
#          persistentVolumeClaim:
#            claimName: db-mysql-pvc
