k8s/v1/service-backend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-scala-clusterip
  labels:
    name: backend-scala-clusterip
spec:
  type: ClusterIP
  clusterIP:
  ports:
    - targetPort: 9090
      port: 9090
      protocol: TCP
  selector:
    name: backend-scala
