k8s/v1/service-backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-scala-nodeport
  labels:
    name: backend-scala-nodeport
spec:
  type: NodePort
  ports:
    - targetPort: 9090
      port: 9090
      nodePort: 30090
  selector:
    name: backend-scala
