k8s/v1/service-frontend-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-scala-clusterip
  labels:
    name: frontend-scala-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 9100
      port: 9100
      protocol: TCP
  selector:
    name: frontend-scala
