k8s/v1/service-frontend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-scala-nodeport
  labels:
    name: frontend-scala-nodeport
spec:
  type: NodePort
  ports:
    - targetPort: 9100
      port: 9100
      nodePort: 30100
  selector:
    name: frontend-scala
