k8s/v1/service-mysql-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql-headless
  labels:
    name: db-mysql-headless
spec:
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
      protocol: TCP
  selector:
    name: db-mysql
  clusterIP: None # by setting this turn this clusterip service into a headless service
