k8s/v1/service-mysql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql-nodeport
  labels:
    name: db-mysql-nodeport
spec:
  type: NodePort
  ports:
    - targetPort: 3306
      port: 3306
      nodePort: 30306
  selector:
    name: db-mysql
