k8s/v1/netpol-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: mysql # pod to protect
  policyTypes:
    #    - Egress
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: backend-scala # pod to provide access from
#  egress: # use smth like this for backup mysql
#    - to:
#        - podSelector:
#            matchLabels:
#              name: mysql
#      ports:
#        - protocol: TCP
#          port: 3306
#
#    - to:
#        - podSelector:
#            matchLabels:
#              name: payroll
#      ports:
#        - protocol: TCP
#          port: 8080
#
#    - ports: # this is to allow internal dns resolution for protected pod
#        - port: 53
#          protocol: UDP
#        - port: 53
#          protocol: TCP
